@@ -1,0 +1,3 @@
+@id	addr:street	addr:housenumber	addr:postcode	addr:housename	addr:conscriptionnumber	addr:flats	addr:floor	addr:door	addr:unit	name	@type
+
+3136661536	Bártfai utca	52/b	1115								node
