@@ -1,0 +1,2 @@
+@id	name	highway	service	surface	leisure	@type
+195016178	Bártfai utca	residential				way
